# SmartScan

./: .gitignore  latest.json  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  upstash.rs
src-tauri/src/scanner/: gaming.rs  hardware.rs  identity.rs  mod.rs  network.rs  security.rs  system.rs  toggles.rs
